created text for progress bar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="card">
-        <div class="rating"></div>
+        <div class="rating">
+            <h2><span class="counter" data-target="90">90</span><sup>%</sup><br>HTML</h2>
+            <div class="block"></div>
+        </div>
     </div>
 </body>
 </html>
