--- a/index.html
+++ b/index.html
@@ -13,5 +13,15 @@
             <div class="block"></div>
         </div>
     </div>
+
+    <script>
+        const rating = document.getElementsByClassName('rating')[0];
+        const block = document.getElementsByClassName('block');
+
+        for (var i = 1; i < 100; i++) {
+            rating.innerHTML += "<div class='block'></div>";
+            block[i].style.transform = "rotate("+ 3.6 * 1 +"deg)";
+        }
+    </script>
 </body>
 </html>
