script for "block" class div for progress bar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         for (var i = 1; i < 100; i++) {
             rating.innerHTML += "<div class='block'></div>";
-            block[i].style.transform = "rotate("+ 3.6 * 1 +"deg)";
+            block[i].style.transform = "rotate("+ 3.6 * i +"deg)";
         }
     </script>
 </body>
