added animation for progress bar & time of progress

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         for (var i = 1; i < 100; i++) {
             rating.innerHTML += "<div class='block'></div>";
             block[i].style.transform = "rotate("+ 3.6 * i +"deg)";
+            block[i].style.animationDelay = '${i/40}s';
         }
     </script>
 </body>
