--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="card">
         <div class="rating">
-            <h2><span class="counter" data-target="50">50</span><sup>%</sup><br>HTML</h2>
+            <h2><span class="counter" data-target="90">90</span><sup>%</sup><br>HTML</h2>
             <div class="block"></div>
         </div>
     </div>
@@ -20,7 +20,7 @@
 
         for (var i = 1; i < 100; i++) {
             rating.innerHTML += "<div class='block'></div>";
-            block[i].style.transform = "rotate("+ 3.6 * i +"deg)";
+            block[i].style.transform = "rotate("+ 3.6 * i +"deg)"; // ! 360deg / 100 = 3.6deg
             block[i].style.animationDelay = '${i/40}s';
         }
     </script>
